--- a/package.json
+++ b/package.json
@@ -11,5 +11,52 @@
     "plugin"
   ],
   "author": "Muhammed Yousrii",
-  "license": "ISC"
+  "license": "ISC",
+    "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "jquery": "^3.2.1",
+    "localforage": "^1.7.1",
+    "lodash": "^4.17.5"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "compass-mixins": "^0.12.10",
+    "css-loader": "^0.28.11",
+    "eslint-config-rallycoding": "^3.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^3.3.1",
+    "json-loader": "^0.5.7",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^2.0.13",
+    "mocha": "^4.0.1",
+    "node-sass": "^4.7.1",
+    "postcss-loader": "^2.1.3",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "resolve-url-loader": "^2.3.0",
+    "sass-lint-config-silvermine": "^1.0.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.18.2",
+    "tapable": "^1.0.0",
+    "url-loader": "^0.5.9",
+    "webpack": "^4.5.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-manifest-plugin": "^1.3.2"
+  }
 }
