--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "src/plugin.js",
   "scripts": {
     "test": "karma start karma.config.js --log-level debug",
-    "start": "webpack --mode=development --env.NODE_ENV=development --env.platform=web --config webpack.config.js",
+    "start": "webpack-dev-server --mode=development --env.NODE_ENV=development --env.platform=web --config webpack.config.js",
     "build": "webpack --mode=production --env.NODE_ENV=production --env.platform=web -p"
   },
   "keywords": [
@@ -15,6 +15,7 @@
   ],
   "author": "Muhammed Yousrii",
   "license": "ISC",
+  "htmlPreprocessor": "pug",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "jquery": "^3.2.1"
