--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "htmlPreprocessor": "pug",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.1.1",
     "jquery": "^3.2.1"
   },
   "devDependencies": {
